<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/documentTitle"
                android:autoText="false"
                android:editable="true"
                android:enabled="true"
                android:textSize="15pt"
                android:hint="@string/defDocTitle"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rGroup"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_gravity="left">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification"
                        android:id="@+id/notifButton"
                        android:layout_weight=".33"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:enabled="true"
                        android:clickable="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/locked"
                        android:id="@+id/lockedButton"
                        android:layout_weight=".33"
                        android:enabled="true"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:clickable="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:id="@+id/regularButton"
                        android:layout_weight=".33"
                        android:enabled="true"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:clickable="true" />

            </RadioGroup>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/documentContent"
                android:textSize="8pt"
                android:textColor="#000000"
                android:hint="@string/docText"
                android:editable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveButton"
                android:id="@+id/saveButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>